--- a/apps/site-marketing/src/styles/global.css
+++ b/apps/site-marketing/src/styles/global.css
@@ -272,4 +272,8 @@
   .text-balance {
     text-wrap: balance;
   }
+
+  .border-focusable {
+    @apply rounded-[0.5rem] border border-slate-600 text-muted-foreground ring-offset-background transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50;
+  }
 }
