Updated home page Ignore <pre> <code> blocks from search.

--- a/apps/site-marketing/src/components/PortableText/custom/CodeBlock.astro
+++ b/apps/site-marketing/src/components/PortableText/custom/CodeBlock.astro
@@ -45,7 +45,7 @@ const htmlString = shiki.renderToHtml(tokens, {
       return `<pre class="${cn(
         className,
         preClasses
-      )}" style="${style}">${children}</pre>`;
+      )}" style="${style}" data-pagefind-ignore>${children}</pre>`;
     },
     code({ className, style, children }) {
       return `<code>${children}</code>`;
