--- a/apps/site-marketing/src/pages/404.astro
+++ b/apps/site-marketing/src/pages/404.astro
@@ -12,10 +12,10 @@ import { Search } from "lucide-react";
     slot="metadata"
   />
   <header class="prose-width content-container">
-    <h1 class="h2">Ground Control to Major Tom</h1>
+    <h1 class="h2 text-balance">Ground Control to Major Tom</h1>
   </header>
   <main class="prose-width content-container" data-pagefind-ignore>
-    <h2 class="h3">This page appears to have drifted off.</h2>
+    <h2 class="h3 text-balance">This page appears to have drifted off.</h2>
 
     <div class="flex flex-col md:flex-row w-full gap-6 py-12">
       <a
