--- a/apps/site-astro/src/pages/style-guide.astro
+++ b/apps/site-astro/src/pages/style-guide.astro
@@ -15,16 +15,16 @@ const post = await getPost("kitchen-sink");
     slot="metadata"
   />
   <header class="prose-width content-container">
-    <h1>Style Guide</h1>
-    <p>Most of the site styles focus around text content.</p>
-    <p>
+    <h1 class="h1">Style Guide</h1>
+    <p class="p">Most of the site styles focus around text content.</p>
+    <p class="p">
       We use <a href="https://tailwindcss.com/docs/typography-plugin"
         >Tailwind Typography</a
       > for nearly all content on the site.
     </p>
-    <p>
-      For everything outside of `prose` elements, we'll fallback to the
-      Typography used in <a
+    <p class="p">
+      For everything outside of <code class="code">prose</code> elements, we'll fallback
+      to the Typography used in <a
         href="https://ui.shadcn.com/docs/components/typography">Shadcn UI</a
       >
     </p>
