--- a/apps/site-astro/src/styles/global.css
+++ b/apps/site-astro/src/styles/global.css
@@ -93,11 +93,13 @@
     @apply my-12;
   }
 
-  .prose-custom code:not(pre code) {
+  .prose-custom code:not(pre code),
+  .code {
     @apply rounded-sm bg-slate-200 px-2 py-1;
   }
 
-  .dark .prose-custom code:not(pre code) {
+  .dark .prose-custom code:not(pre code),
+  .dark .code {
     @apply rounded-sm bg-slate-700 px-2 py-1 text-slate-200;
   }
 
@@ -208,6 +210,13 @@
   }
 }
 
+/* Base elements */
+@layer base {
+  mark {
+    @apply bg-pink-400;
+  }
+}
+
 /* Popover Links */
 @layer components {
   .popover-link {
@@ -242,6 +251,11 @@
     opacity: 0;
     transition: opacity 200ms;
   }
+
+  .dark .zoom-overlay {
+    background: hsla(223, 54%, 8%, 0.922);
+  }
+
   .zoom-overlay-open .zoom-overlay {
     opacity: 1;
   }
