--- a/apps/site-astro/src/components/content/CodeBlock.astro
+++ b/apps/site-astro/src/components/content/CodeBlock.astro
@@ -49,7 +49,7 @@ const htmlString = shiki.renderToHtml(tokens, {
 
 {
   filename && (
-    <header class="flex items-center mb-2 text-muted">
+    <header class="mb-2 flex items-center text-muted">
       <TerminalIcon className="h-4 w-4" />
       <span class="pl-2">{filename}</span>
     </header>
