--- a/apps/site-astro/src/components/util/ClipboardCopyBtn.astro
+++ b/apps/site-astro/src/components/util/ClipboardCopyBtn.astro
@@ -3,12 +3,12 @@ import { ClipboardCopy, ClipboardCheck } from "lucide-react";
 ---
 
 <button
-  class="border-focusable p-2 absolute top-2 right-2 flex bg-[#24292e]"
+  class="border-focusable absolute right-2 top-2 flex bg-[#24292e] p-2"
   data-clipboard-copy
   ><span class="sr-only">Copy to Clipboard</span>
   <div class="w-5 overflow-hidden">
     <div
-      class="w-10 h-5 flex flex-row items-center transition-transform"
+      class="flex h-5 w-10 flex-row items-center transition-transform"
       data-clipboard-icons
     >
       <ClipboardCopy className="w-5" />
