--- a/apps/site-astro/src/pages/concepts/index.astro
+++ b/apps/site-astro/src/pages/concepts/index.astro
@@ -30,7 +30,7 @@ const title = getSanityTypeDisplayText("concept", true);
   <main class="content-container prose-width" data-pagefind-ignore>
     {
       data && (
-        <div class="grid md:grid-cols-2 gap-4 not-prose">
+        <div class="not-prose grid gap-4 md:grid-cols-2">
           {data.map((concept) => {
             return (
               <a href={getUrlForSanityType("concept", concept.slug.current)}>
