--- a/apps/site-astro/src/components/util/ClipboardCopyBtn.astro
+++ b/apps/site-astro/src/components/util/ClipboardCopyBtn.astro
@@ -12,7 +12,7 @@ import { ClipboardCopy, ClipboardCheck } from "lucide-react";
       data-clipboard-icons
     >
       <ClipboardCopy className="w-5" />
-      <ClipboardCheck className="w-5 text-green-400" />
+      <ClipboardCheck className="w-5 text-green-600 dark:text-green-400" />
     </div>
   </div>
 </button>
