--- a/apps/site-astro/src/pages/index.astro
+++ b/apps/site-astro/src/pages/index.astro
@@ -4,6 +4,12 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <main>
-    <h1>Welcome to SiteName</h1>
+    <div class="prose-width content-container">
+      <h1 class="h1">Welcome to Space Madness</h1>
+      <p class="p">
+        Check out <a href="https://spacemadness.dev/">the docs</a> for details on
+        how to get started
+      </p>
+    </div>
   </main>
 </Layout>
