Attempt to fix social sharing issues

--- a/apps/site-astro/src/components/MetaTags.astro
+++ b/apps/site-astro/src/components/MetaTags.astro
@@ -21,7 +21,7 @@ const data: Required<Props> = {
   title: titleTemplate(),
   description: siteDescription,
   url: hostname,
-  image: getPublicAssetUrl("social-sharing-card.webp"),
+  image: getPublicAssetUrl("social-sharing-card.jpg"),
   ...props,
 };
 ---
