--- a/apps/site-astro/src/pages/index.astro
+++ b/apps/site-astro/src/pages/index.astro
@@ -7,8 +7,8 @@ import Layout from "../layouts/Layout.astro";
     <div class="prose-width content-container">
       <h1 class="h1">Welcome to Space Madness</h1>
       <p class="p">
-        Check out <a href="https://spacemadness.dev/">the docs</a> for details on
-        how to get started
+        Check out <a href="https://spacemadness.dev/docs/">the docs</a> for details
+        on how to get started
       </p>
     </div>
   </main>
