Refactored to remove backlink types.

--- a/apps/site-astro/src/components/content/BacklinksList.astro
+++ b/apps/site-astro/src/components/content/BacklinksList.astro
@@ -9,6 +9,7 @@ import { getSanityTypeDisplayText } from "@/lib/sanityStrings";
 import { getUrlForSanityType } from "@/lib/url";
 import { cn } from "@/lib/utils";
 import type { Backlink, BacklinkResult } from "@/queries/partials/backlink";
+import type { SanityLinkableType } from "content-models";
 
 interface Props {
   backlinks: BacklinkResult;
@@ -29,7 +30,7 @@ function getBacklinkUrl(backlink: Backlink) {
   return getUrlForSanityType(backlinkObj._type, backlinkObj.slug.current);
 }
 
-type SanityTypes = "post" | "concept" | "tag" | "resource" | "resourceContent";
+type SanityTypes = SanityLinkableType | "resourceContent";
 
 type BacklinkBucket = {
   [K in SanityTypes]: Backlink[];
@@ -38,7 +39,7 @@ type BacklinkBucket = {
 function bucketBacklinksByType(backlinks: Backlink[]) {
   // Use this structure to set the display order of buckets
   // Buckets not listed here will show at the end
-  const backlinkBucket: BacklinkBucket = {
+  const backlinkBuckets: BacklinkBucket = {
     post: [],
     concept: [],
     resource: [],
@@ -49,14 +50,14 @@ function bucketBacklinksByType(backlinks: Backlink[]) {
   for (const backlink of backlinks) {
     const type = backlink._type;
 
-    if (backlinkBucket[type]) {
-      backlinkBucket[type].push(backlink);
+    if (backlinkBuckets[type]) {
+      backlinkBuckets[type].push(backlink);
     } else {
-      backlinkBucket[type] = [backlink];
+      backlinkBuckets[type] = [backlink];
     }
   }
 
-  return backlinkBucket;
+  return backlinkBuckets;
 }
 
 const buckets = backlinks ? bucketBacklinksByType(backlinks) : [];
