Added 404, improved border-focusable state Fixed prose italic in quotes Added some utility classes

--- a/apps/site-astro/src/styles/global.css
+++ b/apps/site-astro/src/styles/global.css
@@ -81,7 +81,7 @@
 
 @layer utilities {
   .prose-custom {
-    @apply prose prose-slate dark:prose-invert md:prose-lg prose-headings:tracking-tight prose-p:leading-7 prose-code:before:hidden prose-code:after:hidden;
+    @apply prose prose-slate dark:prose-invert md:prose-lg prose-headings:tracking-tight prose-p:leading-7 prose-blockquote:not-italic prose-code:before:hidden prose-code:after:hidden;
   }
 
   .content-container {
@@ -273,7 +273,17 @@
     text-wrap: balance;
   }
 
+  .trim-bottom > :last-child {
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  .trim-top > :first-child {
+    padding-top: 0;
+    margin-top: 0;
+  }
+
   .border-focusable {
-    @apply rounded-[0.5rem] border border-slate-600 text-muted-foreground ring-offset-background transition-colors hover:bg-accent/10 hover:text-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:hover:bg-accent dark:hover:text-accent-foreground;
+    @apply rounded-[0.5rem] border border-primary/50 text-muted-foreground ring-offset-background transition-colors hover:bg-accent/70 hover:text-accent-foreground/90 focus:bg-accent/70 focus:text-accent-foreground/90 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:hover:bg-accent dark:hover:text-accent-foreground;
   }
 }
