Updated Prettier to work with v3 and astro files

--- a/apps/site-astro/src/components/content/Embed.astro
+++ b/apps/site-astro/src/components/content/Embed.astro
@@ -19,7 +19,7 @@ const { url } = Astro.props;
         return <Vimeo id={url} />;
 
       case /^https?:\/\/(?:www\.)?youtu(?:be\.com\/(?:watch\?v=|embed\/)|\.be\/)([\w\-]+)(?:$|\&|\?)/.test(
-        url
+        url,
       ):
         return <YouTube id={url} />;
 
