--- a/apps/site-astro/src/pages/index.astro
+++ b/apps/site-astro/src/pages/index.astro
@@ -15,8 +15,8 @@ const { body } = testPortableTextData;
     <div class="prose-width content-container">
       <h1 class="h1">Welcome to Space Madness</h1>
       <p class="p">
-        Check out <a href="https://spacemadness.dev/docs/">the docs</a> for details
-        on how to get started.
+        Check out <a href="https://spacemadness.dev/docs/">the docs</a> for
+        details on how to get started.
       </p>
       <hr class="my-10" />
       <div class="prose mt-6">
