--- a/packages/sanity-astro-embeds/src/Embed.astro
+++ b/packages/sanity-astro-embeds/src/Embed.astro
@@ -19,9 +19,11 @@ if (!url && !id) {
 
 const { provider, id: providerId } = providerData;
 
-const renderProps = provider.getRenderProps(url || id || "");
+const { wrapperClass, ...renderProps } = provider.getRenderProps(
+  url || id || "",
+);
 ---
 
-<div class="not-prose" data-pagefind-ignore>
+<div class:list={["not-prose", wrapperClass]} data-pagefind-ignore>
   <ClientEmbed providerId={providerId} {...renderProps} client:visible />
 </div>
